--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,8 @@
 }
 
 .items:hover {
-  background-color: rgba(179, 15, 15, 0.1);
+  background-color: rgba(224, 223, 223, 0.1);
+  color: #3462e0;
 }
 .gallery-wrapper {
 
@@ -157,6 +158,7 @@ margin-bottom: 15px;
 }
 .sidebar-wrapper .container-block {
 padding: 10px;
+
 margin-bottom: 50px;
 }
 .main-wrapper {
@@ -225,7 +227,9 @@ padding: 20px;
   }
   .main-wrapper {
   padding: 30px;
+  
   }
+
   }
   @media (max-width: 341px) {
   thead {
@@ -234,6 +238,7 @@ padding: 20px;
   tbody td {
   display: block;
   text-align:center;
+
   }
   }
 
